completed implementation of mfr